Added extra code to make map better

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -2,4 +2,33 @@
 
   <div id="map" class="match-parent"></div>
 
+  <div id="filter-menu" >
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <ion-toggle></ion-toggle>
+        </ion-col>
+        <ion-col>
+          <ion-toggle></ion-toggle>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-toggle></ion-toggle>
+        </ion-col>
+        <ion-col>
+          <ion-toggle></ion-toggle>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-toggle></ion-toggle>
+        </ion-col>
+        <ion-col>
+          <ion-toggle></ion-toggle>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
+
 </ion-content>
