--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -6,6 +6,7 @@
   right: 0;
   top: 50%;
   transform: translateY(-50%);
+  z-index: 1;
 }
 
 #container strong {
@@ -49,4 +50,13 @@
 #filter-menu ion-col {
   display: flex;
   justify-content: space-evenly;
+}
+
+.marker {
+  background-image: url(../../assets/icon/favicon.png);
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
 }
