--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,6 @@
 <ion-content [fullscreen]="true">
   <div id="map" class="match-parent"></div>
+  <div id="info" class="info"></div>
 
   <div id="filter-menu" >
     <ion-grid>
