--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,8 @@
 <ion-content [fullscreen]="true">
   <div id="map" class="match-parent"></div>
-  <div id="info" class="info"></div>
+  <div class="popup">
+    <ion-card id="info" class="info"></ion-card>
+  </div>
 
   <div id="filter-menu" >
     <ion-grid>
