Fixed not being able to click on map at popup location

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-content [fullscreen]="true">
   <div id="map" class="match-parent"></div>
-  <div class="popup">
+  <div id="popup" class="popup">
     <ion-card id="info" class="info"></ion-card>
   </div>
 
