Changed home to map

--- a/src/app/map/map.page.html
+++ b/src/app/map/map.page.html
@@ -1,8 +1,7 @@
-<ion-content [fullscreen]="true">
-
+<ion-content>
   <div id="map" class="match-parent"></div>
 
-  <div id="filter-menu" >
+  <div id="filter-menu">
     <ion-grid>
       <ion-row>
         <ion-col>
@@ -30,7 +29,4 @@
       </ion-row>
     </ion-grid>
   </div>
-
-  <ion-button [routerAnimation]="animation" [routerLink]="['/news']">Article</ion-button>
-
 </ion-content>
