--- a/src/app/map/map.page.scss
+++ b/src/app/map/map.page.scss
@@ -37,7 +37,8 @@ ion-content {
     border-bottom: 1px solid #d9d9d9;
     border-right: 1px solid #d9d9d9;;
     p {
-      padding: 2vh 0 2vh 5px;
+      padding: 2vh 0;
+      text-align: center;
       margin: 0;
       font-size: 30px;
     }
@@ -46,6 +47,7 @@ ion-content {
   .selected-category {
     border-right: solid blue 2px;
     margin-right: 0;
+    background-color: #f1f1f1;
   }
 }
 
@@ -59,5 +61,9 @@ ion-content {
     display: flex;
     justify-content: center;
     align-items: center;
+
+    ion-icon {
+      font-size: 30px;
+    }
   }
 }
