Removed dark mode

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -75,12 +75,12 @@
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
 }
-
+/*
 @media (prefers-color-scheme: dark) {
-  /*
+  !*
    * Dark Colors
    * -------------------------------------------
-   */
+   *!
 
   body {
     --ion-color-primary: #428cff;
@@ -147,10 +147,10 @@
     --ion-color-light-tint: #383a3e;
   }
 
-  /*
+  !*
    * iOS Dark Theme
    * -------------------------------------------
-   */
+   *!
 
   .ios body {
     --ion-background-color: #000000;
@@ -187,10 +187,10 @@
   }
 
 
-  /*
+  !*
    * Material Design Dark Theme
    * -------------------------------------------
-   */
+   *!
 
   .md body {
     --ion-background-color: #121212;
@@ -229,4 +229,4 @@
 
     --ion-card-background: #1e1e1e;
   }
-}
+}*/
