Changed wrong default path of article page

--- a/src/app/article/article.page.html
+++ b/src/app/article/article.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="home" [routerAnimation]="animation" icon="chevron-back-outline"></ion-back-button>
+      <ion-back-button defaultHref="tabs" [routerAnimation]="animation" icon="chevron-back-outline"></ion-back-button>
     </ion-buttons>
     <ion-title>Artikel</ion-title>
   </ion-toolbar>
