--- a/src/app/map/map.page.html
+++ b/src/app/map/map.page.html
@@ -2,13 +2,13 @@
     <div id="map"></div>
     <ion-card id="popup" #popup>
         <ion-card-header>
-            <ion-card-title>{{ currentFeature.properties.title }}</ion-card-title>
-            <img class="logo" [src]="currentFeature.properties.broadcaster" [alt]="currentFeature.properties.broadcaster" style="max-height:50px; max-width:50px; position:absolute; right:0; top:0;">
-        </ion-card-header>
+            <ion-card-title style="max-height:80%; font-size:larger;">{{ currentFeature.properties.title }}</ion-card-title>
+          </ion-card-header>
         <ion-card-content>
             <ion-nav-link>
                 <a [href]="currentFeature.properties.link">Lees meer...</a>
             </ion-nav-link>
+            <img class="logo" [src]="currentFeature.properties.broadcaster" [alt]="currentFeature.properties.broadcaster" style="max-height:30px; max-width:80px; position:absolute; right:0; bottom:0;">
         </ion-card-content>
     </ion-card>
 
