--- a/src/app/news/news.page.scss
+++ b/src/app/news/news.page.scss
@@ -29,3 +29,17 @@
 #article {
   margin: 0 5px;
 }
+
+h2 {
+  font-size: xx-large;
+  border-bottom: solid 2px #7DB5FA;
+  margin: 10px;
+}
+
+ion-card {
+  max-height: 30%;
+}
+
+ion-card-title {
+  font-weight: bold;
+}
