--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,9 +1,9 @@
-
-
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Inloggen</ion-title>
+  </ion-toolbar>
+</ion-header>
 <ion-content class="ion-padding" align="center">
-  <ion-text color="secondary">
-    <h1>Inloggen</h1>
-  </ion-text>
 
   <form class="form" [formGroup]="validations_form" (ngSubmit)="loginUser(validations_form.value)">
 
