--- a/src/app/map/map.page.html
+++ b/src/app/map/map.page.html
@@ -6,7 +6,7 @@
           </ion-card-header>
         <ion-card-content>
             <ion-nav-link>
-                <a [href]="'tabs/news/article?id='+currentFeature.properties.id">Lees meer...</a>
+                <a [href]="'article?id='+currentFeature.properties.id">Lees meer...</a>
             </ion-nav-link>
             <img class="logo" [src]="currentFeature.properties.broadcaster" [alt]="currentFeature.properties.broadcaster" style="max-height:30px; max-width:80px; position:absolute; right:0; bottom:0;">
         </ion-card-content>
