--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,15 +2,15 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="news">
-      <ion-icon name="ellipse"></ion-icon>
+      <ion-icon name="newspaper-outline"></ion-icon>
       <ion-label>Headlines</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="map">
-      <ion-icon name="triangle"></ion-icon>
+      <ion-icon name="location-sharp"></ion-icon>
       <ion-label>Map</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="account">
-      <ion-icon name="ellipse"></ion-icon>
+      <ion-icon name="person-circle-outline"></ion-icon>
       <ion-label>Account</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
